--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
     show-sql: 'false'
   datasource:
     password: '12341234'
-    url: 'jdbc:mariadb://studydb.chyai4ykcd3w.eu-north-1.rds.amazonaws.com:3306/studyDB'
+    url: 'jdbc:mariadb://studydb.chyai4ykcd3w.eu-north-1.rds.amazonaws.com:3306/studyMovieDB'
     driver-class-name: org.mariadb.jdbc.Driver
-    username: 'master'
+    username: 'admin'
 mybatis:
   mapper-locations: classpath:mybatis/mapper/**/**.xml
   configuration:
